@@ -1,3 +1,9 @@
+2005-07-16  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* tests/test_base.py (test_unique4): test that all information
+	passed to getUnique is used (related to discussion of berlios bug
+	#4530).
+
 2005-07-08  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* doc/manual.rst: at a user's request, adding a mention to the
